# slurps

./: CMakeLists.txt  README.MD
src/: ArgParser.h  Hash.h  main.cpp
src/Image/: Image.cpp  Image.h  Validation.hpp
src/Pattern/: PatternExpander.h
src/Processor/: ProcessingOperation.h  Processor.cpp  Processor.h  ProcessorType.h
src/Rules/: ProcessingOperation.h  Rules.h  RulesParsing.cpp  RulesParsing.h  RulesParsing.hpp  Types.h  Validator.cpp  Validator.h
src/Serializer/: Serializer.cpp  Serializer.h
